syntax = "proto3";
package gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins.regions.testsupport.input";


enum TestRegionIdInput {
    REGION_1 = 0;
    REGION_2 = 1;
    REGION_3 = 2;
    REGION_4 = 3;
    REGION_5 = 4;
    REGION_6 = 5;
}

enum TestRegionPropertyIdInput {
    REGION_PROPERTY_1_BOOLEAN_MUTABLE = 0;
    REGION_PROPERTY_2_INTEGER_MUTABLE = 1;
    REGION_PROPERTY_3_DOUBLE_MUTABLE = 2;
    REGION_PROPERTY_4_BOOLEAN_IMMUTABLE = 3;
    REGION_PROPERTY_5_INTEGER_IMMUTABLE = 4;
    REGION_PROPERTY_6_DOUBLE_IMMUTABLE = 5;
}
